test_next-20170711/20170710221534/build/build_20170710221534_log.txt
test_build: Mon Jul 10 22:21:31 PDT 2017: started on defconfig test_next-20170711 (63fe4f1efdb3dfff7ab4cefa4d9b86336e50ce3b)
test_build: Mon Jul 10 22:21:31 PDT 2017: serial is 20170710221534
arch/arm64/Makefile:23: ld does not support --fix-cortex-a53-843419; kernel may be susceptible to erratum
arch/arm64/Makefile:44: Detected assembler with broken .inst; disassembly will be unreliable
fs/9p/v9fs.c: In function ‘v9fs_show_options’:
fs/9p/v9fs.c:140:11: error: ‘struct v9fs_session_info’ has no member named ‘cachetag’
  if (v9ses->cachetag && v9ses->cache == CACHE_FSCACHE)
           ^
fs/9p/v9fs.c:141:38: error: ‘struct v9fs_session_info’ has no member named ‘cachetag’
   seq_printf(m, ",cachetag=%s", v9ses->cachetag);
                                      ^
make[2]: *** [fs/9p/v9fs.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [fs/9p] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [fs] Error 2
make: *** Waiting for unfinished jobs....
test_build: Mon Jul 10 22:25:18 PDT 2017: FAILED on defconfig test_next-20170711
test_build: Mon Jul 10 22:25:18 PDT 2017: ended on defconfig test_next-20170711
